--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -84,18 +84,10 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-      extractData().then(
-        //Display Patient Demographics and Observations if extractData was success
-        function(p) {
-          drawVisualization(p);
-        },
-
-        //Display 'Failed to call FHIR Service' if extractData failed
-        function() {
-          $('#loading').hide();
-          $('#errors').html('<p> Failed to call FHIR Service </p>');
-        }
-      );
+      FHIR.oauth2.authorize({
+        'client_id': '81c02963-c868-4b1d-b697-4fa9989eff58',
+        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+      });
     </script>
   </body>
 </html>
